--- a/jenkinsfile
+++ b/jenkinsfile
@@ -16,7 +16,7 @@ node {
         }
     }
 
-    stage('Push image') 
+    stage('Push image') {
         docker.withRegistry('https://registry.hub.docker.com', 'docker-hub-credentials') {
             app.push("${env.BUILD_NUMBER}")
             app.push("latest")
